--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Lading Page</title>
+    <title>Site HOOKED</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,10 +19,12 @@
 <body>
     <header>
         <div class="container">
-            <img class="logo" src="assets/img/logo-hooked.png">
 
-            <button class="botao1">Criar conta</button>
-            <button class="botao2">Entrar</button>
+            <div class="logo"><img src="assets/img/logo-hooked.png"></div>
+
+            <div class="menu">
+            <button class="botao1">Criar conta</button></div>
+            <button class="botao2">Entrar</button></div>
 
         </div>
     </header>
@@ -179,6 +181,38 @@
 
     </div>
     </section>
+
+    <iframe width="100%" height="562px" src="https://www.youtube.com/embed/53MyR_Z3i1w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+    <section class="formulario">
+    <div class="container5">
+        
+        <div class="form-info">
+        <h4>Entre em contato</h4>
+        <p class="form-text">Deixe suas críticas e sugestões no formulário abaixo.</p>
+        </div>
+
+        <form action="  " method="get">
+            <input class="imput1" type="text" name="nome" placeholder="Nome">
+            <br>
+            <input class="imput1" type="email" name="email" placeholder="E-mail">
+            <br>
+            <input class="imput2" type="text" name="descricao" placeholder="Descrição">
+            <br>
+            <button class="botao5" type="submit"> ENVIAR </button>
+        </form>
+    </div>
+    </section>
+
+    <section class="rodape">
+        <div class="container">
+
+            <div class="logo"><img src="assets/img/logo-hooked.png"></div>
+            <div><p class="text-rodape">HOOKED 2017, todos os direitos reservados.</p></div>
+        </div>
+    </section>
+
+
 
 </body>
 </html>
