--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,16 @@
     <title>Site HOOKED</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Hooked: Compartilhe suas conquistas com seus amigos.">
+
+    <meta property ="og:locale" content="pt_BR" />
+    <meta property="og:type" content="site" />
+    <meta property="og:title" content="Hooked: Compartilhe suas conquistas" />
+    <meta property="og:description" content="Focalize suas conquistas em um só lugar" />
+    <meta property="og:url" content="https://bancohooked.herokuapp.com/" />
+    <meta property="og:site_name" content="Hooked" />
+    <meta property="og:image" content="https://bancohooked.herokuapp.com/captura.png" />
+
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -14,7 +24,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#9f00a7">
     <meta name="theme-color" content="#ffffff">
-    
+
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Ubuntu&display=swap" rel="stylesheet">
 
