--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <meta property="og:url" content="https://bancohooked.herokuapp.com/" />
     <meta property="og:site_name" content="Hooked" />
     <meta property="og:image" content="https://bancohooked.herokuapp.com/captura.png" />
+    <meta property="og.image:width" content="1200" />
+    <meta property="og.image:height" content="627" />
+
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
